--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">LoginAndSignup</string>
+    <string name="app_name">ProyectoMoviles</string>
     <string name="Username">Username</string>
     <string name="Password">Password</string>
     <string name="RememberMe">Remember Me</string>
@@ -12,4 +12,6 @@
     <string name="ConfirmEmailAddress">Confirm Email Address</string>
     <string name="SignUp">Sign Up</string>
     <string name="registrationPage">Registration Page</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
